SCRUM-206 refact: 성능개선 위해 post얻어오기 수정(fetch 사용)